--- a/Inhalt/01_Standard/titelseite.tex
+++ b/Inhalt/01_Standard/titelseite.tex
@@ -7,12 +7,12 @@
 	%                  den Inhalt der Seite nach oben schieben.
 	\begin{minipage}{0.49\textwidth}
 		\flushleft
-		\includegraphics[height=2.5cm]{Bilder/Logos/Logo_SAP.pdf} 
+		%\includegraphics[height=2.5cm]{Bilder/Logos/Logo_SAP.pdf} 
 	\end{minipage}
 	\hfill
 	\begin{minipage}{0.49\textwidth}
 		
-		\includegraphics[height=2cm]{Bilder/Logos/Logo_HWGLU.png} 
+		%\includegraphics[height=2cm]{Bilder/Logos/Logo_HWGLU.png} 
 	\end{minipage}
 	\hfill
 \end{figure} 
@@ -21,10 +21,10 @@
 \begin{center}
 	\huge{\textbf{\titel}}\\[1.5cm]
 	\Large{\textbf{\arbeit}}\\[0.5cm]
-	\normalsize{im Rahmen der Prüfung zum\\[1ex] \textbf{Bachelor of Science (B.Sc.)}}\\[0.5cm]
-	\Large{des Studienganges \studiengang}\\[1ex]
-	\normalsize{an der Dualen Hochschule Baden-Württemberg Karlsruhe}\\[1cm]
-	\normalsize{von}\\[1ex] \Large{\textbf{\autor}} \\[1cm]
+	\normalsize{Part of the Examination for the\\[1ex] \textbf{Bachelor of Science (B.Sc.)}}\\[0.5cm]
+	\Large{of \studiengang}\\[1ex]
+	\normalsize{at the University of Business and Society Ludwigshafen}\\[1cm]
+	\normalsize{by}\\[1ex] \Large{\textbf{\autor}} \\[1cm]
 	% Hinweis: Manche Dozenten möchten einen Hinweis auf den Sperrvermerk auf der Titelseite.
 	% \large{{\color{red}- Sperrvermerk -}}\\[1cm]
 \end{center}
@@ -32,14 +32,14 @@
 \begin{center}
 	\vfill
 	\begin{tabular}{ll}
-		Abgabedatum:                     & \abgabe \\[0.2cm]
-		Bearbeitungszeitraum:            & \bearbeitungszeitraum \\[0.2cm]
-		Matrikelnummer, Kurs:            & \matrikelnr , \kurs \\[0.2cm]
-		Ausbildungsfirma:                & \firmaName \\
+		Date of submission:                     & \abgabe \\[0.2cm]
+		Timeframe:            & \bearbeitungszeitraum \\[0.2cm]
+		Matriculation Number, Kurs:            & \matrikelnr , \kurs \\[0.2cm]
+		Company:                & \firmaName \\
 		                                 & \firmaStrasse \\
 		                                 & \firmaPlz \\[0.2cm]
-		Betreuer der Ausbildungsfirma:   & \betreuerFirma \\[0.2cm]
-		Gutachter der Dualen Hochschule: & \betreuerDhbw \\[2cm]
+		Company Supervisor:   & \betreuerFirma \\[0.2cm]
+		Academic Supervisor: & \betreuerDhbw \\[2cm]
 	\end{tabular} 
 \end{center}
 \end{titlepage}
