Kapitel nach Vorgaben umstrukturiert

--- a/Inhalt/04_Inhalt/alternatives.tex
+++ b/Inhalt/04_Inhalt/alternatives.tex
@@ -1,4 +1,7 @@
-\chapter{Approaches to Data Mining}
+\chapter{Discussion of Alternatives}
+\section{Criteria}
+\section{KMeans}
+\section{Deep Learning}
 \section{Data Cleaning}
 \section{Tf-Idf}
 \section{K-Means}
