--- a/Praxisbericht.tex
+++ b/Praxisbericht.tex
@@ -97,11 +97,14 @@
 %\include{Inhalt/04_Inhalt/mathematische-formeln}
 %\include{Inhalt/04_Inhalt/quellcode}
 %\include{Inhalt/04_Inhalt/literaturHinweis}
+\include{Inhalt/04_Inhalt/introduction.tex}
 \include{Inhalt/04_Inhalt/Objectives and Criteria.tex}
-\include{Inhalt/04_Inhalt/State of the Art.tex}
-\include{Inhalt/04_Inhalt/Different Approaches.tex}
+\include{Inhalt/04_Inhalt/fundamentals.tex}
+\include{Inhalt/04_Inhalt/alternatives.tex}
+\include{Inhalt/04_Inhalt/theoretical.tex}
+\include{Inhalt/04_Inhalt/practical.tex}
 \include{Inhalt/04_Inhalt/Evaluation.tex}
-
+\include{Inhalt/04_Inhalt/Outlook.tex}
 % ---- Literaturverzeichnis
 \cleardoublepage
 \renewcommand*{\chapterpagestyle}{plain}
