add rough chapter drafts

--- a/Inhalt/04_Inhalt/Objectives and Criteria.tex
+++ b/Inhalt/04_Inhalt/Objectives and Criteria.tex
@@ -1,3 +1,6 @@
 \chapter{Objectives and Criteria}
 \section{Detailed Task Description}
+The goal of the thesis is to add value to real business documents by aggregating expenses into clusters of similar expenses. The supplied document dataset consists of 150.000 invoices. The invoices contain different information, for example the vendor, billing amount or a description of the goods. Valuable information for companies would be insight into the different categories of expenses and the corresponding cost. With traditional data analysis methods, the company’s controlling departments cannot identify which expenses are similar in nature (for example logistics costs). 
+The task is to perform a full data analysis on the supplied dataset. The dataset is to be prepared for processing with established methods. An evaluation for different means of feature extraction, machine learning, model evaluation and visualization should be performed. With the evaluation a complete flow for the data processing should be presented. The result should be an added value to the dataset in the form of aggregated expenses.
+
 \section{Criteria set by SAP SE}
