--- a/Inhalt/04_Inhalt/alternatives.tex
+++ b/Inhalt/04_Inhalt/alternatives.tex
@@ -1,12 +1,29 @@
 \chapter{Discussion of Alternatives}
 \section{Criteria}
-\section{KMeans}
-\section{Deep Learning}
-\section{Data Cleaning}
-\section{Tf-Idf}
-\section{K-Means}
+
+\section{Data preprocessing}
+- transforming json documents into dataframe rows
+
+- removing stopwords from several languages
+
+- removing numbers and interpunction
+
+- tokenization
+
+\section{Feature extraction}
+\subsection{Tf-Idf}
+- bag of words model
+\subsection{Word2Vec, Embeddings}
+- explain tf-idf
+\subsection{HashVectorizer}
+\subsection{n-Grams and Tf-Idf}
+
+\section{Model}
+\subsection{K-Means with Euclidean Distance}
+
+\section{Model Evaluation}
 \subsection{Elbow Diagram}
-\subsection{Visualizations}
-\section{Embeddings}
-\section{Transformers}
-\section{Dimensionality Reduction}
+
+\section{Visualization}
+\subsection{PCA}
+\subsection{T-SNE}
