--- a/Inhalt/04_Inhalt/introduction.tex
+++ b/Inhalt/04_Inhalt/introduction.tex
@@ -1,6 +1,9 @@
 \chapter{Introduction}
 \section{Motivation}
 \subsection{Current situation}
+An essential part of economic counselling is the assessment of allocated spending for different segments of a company. Spending of a firm usually is written down in invoice documents, which have to be grouped for segments to analyze their costs.
+While the global market is estimated to comprise 550 billion invoices annually, 90\% are exchanged paper-based \cite{koch_e-invoicing_nodate}. With modern technology, these paper- or document based (PDF, docx, odt) files can be transformed into a structured or semi-structured format. According to expert estimates, unstructured data makes up for more than 80\% of enterprise data [2]. This data is not leverageable with traditional data analysis tools, but its value must be harvested for companies to utilize their full potential. A large share of unstructured data found in companies is textual data. \cite{turing_icomputing_1950}
+
 \subsection{Importance}
 \section{Research Question}
 \section{Outline}
