--- a/Inhalt/04_Inhalt/practical.tex
+++ b/Inhalt/04_Inhalt/practical.tex
@@ -1,1 +1,7 @@
 \chapter{Practical Implementation}
+
+\section{Data preprocessing}
+\section{Feature extraction}
+\section{Model Training}
+\section{Model Evaluation}
+\section{Visualization}
