--- a/Inhalt/03_Verzeichnisse/abkuerzungen.tex
+++ b/Inhalt/03_Verzeichnisse/abkuerzungen.tex
@@ -6,5 +6,6 @@
 	% Alphabetisch selbst sortieren - nicht verwendete Kürzel rausnehmen!
 	\acro{AI}{Artificial Intelligence}
 	\acro{AI BUS}{SAP AI Business Services}
+	\acro{NLP}{Natural Language Processing}
 
 \end{acronym}
