--- a/Inhalt/01_Standard/titelseite.tex
+++ b/Inhalt/01_Standard/titelseite.tex
@@ -3,16 +3,16 @@
 \enlargethispage{4cm}
 
 \begin{figure}           % Logo vom Ausbildungsbetrieb und der DHBW
-	% \vspace*{-5mm} % Sollte dein Titel zu lang werden, kannst du mit diesem "Hack" 
+	\vspace*{-5mm} % Sollte dein Titel zu lang werden, kannst du mit diesem "Hack" 
 	%                  den Inhalt der Seite nach oben schieben.
 	\begin{minipage}{0.49\textwidth}
 		\flushleft
-		%\includegraphics[height=2.5cm]{Bilder/Logos/Logo_SAP.pdf} 
+		\includegraphics[height=2.5cm]{Bilder/Logos/Logo_SAP.pdf} 
 	\end{minipage}
 	\hfill
 	\begin{minipage}{0.49\textwidth}
 		
-		%\includegraphics[height=2cm]{Bilder/Logos/Logo_HWGLU.png} 
+		\includegraphics[height=2cm]{Bilder/Logos/Logo_HWGLU.png} 
 	\end{minipage}
 	\hfill
 \end{figure} 
@@ -20,24 +20,34 @@
 
 \begin{center}
 	\huge{\textbf{\titel}}\\[1.5cm]
-	\Large{\textbf{\arbeit}}\\[0.5cm]
-	\normalsize{Part of the Examination for the\\[1ex] \textbf{Bachelor of Science (B.Sc.)}}\\[0.5cm]
-	\Large{of \studiengang}\\[1ex]
-	\normalsize{at the University of Business and Society Ludwigshafen}\\[1cm]
-	\normalsize{by}\\[1ex] \Large{\textbf{\autor}} \\[1cm]
+	\Large{\textbf{\arbeit}}\\[1cm]
+	\normalsize{Part of the Examination for the \\[0.2cm]Bachelor of Science (B.Sc.)\\[0.2cm] of \\[0.2cm]}
+	\normalsize{International Business Administration and Information Technology}\\[0.2cm]
+	\normalsize{at the University of Business and Society Ludwigshafen}\\[2cm]
+	
 	% Hinweis: Manche Dozenten möchten einen Hinweis auf den Sperrvermerk auf der Titelseite.
 	% \large{{\color{red}- Sperrvermerk -}}\\[1cm]
 \end{center}
 
 \begin{center}
 	\vfill
+	\normalsize{by}\\[0.5cm]
+	\begin{tabular}{ll}
+		Lisa Rebecca Mirjam Schmidt                   \\[0.2cm]
+		Sternstraße 93  \\[0.2cm]
+		67063 Ludwigshafen am Rhein\\[2cm]
+	\end{tabular} 
+\end{center}
+
+\begin{center}
+	\vfill
 	\begin{tabular}{ll}
 		Date of submission:                     & \abgabe \\[0.2cm]
-		Timeframe:            & \bearbeitungszeitraum \\[0.2cm]
-		Matriculation Number, Kurs:            & \matrikelnr , \kurs \\[0.2cm]
-		Company:                & \firmaName \\
-		                                 & \firmaStrasse \\
-		                                 & \firmaPlz \\[0.2cm]
+		%Timeframe:            & \bearbeitungszeitraum \\[0.2cm]
+		%Matriculation Number, Kurs:            & \matrikelnr , \kurs \\[0.2cm]
+		%Company:                & \firmaName \\
+		%                                 & \firmaStrasse \\
+		%                                 & \firmaPlz \\[0.2cm]
 		Company Supervisor:   & \betreuerFirma \\[0.2cm]
 		Academic Supervisor: & \betreuerDhbw \\[2cm]
 	\end{tabular} 
