--- a/Praxisbericht.tex
+++ b/Praxisbericht.tex
@@ -12,7 +12,7 @@
 \setboolean{e-Abgabe}{false}    % false=gedruckte Fassung
 
 % ---- Persönlichen Daten:
-\newcommand{\titel}{Data Mining enterprise-scale financial data with SAP AI Core}
+\newcommand{\titel}{Enhancing insights into spending through aggregation with automated document clustering of a large-scale multilingual corpus}
 \newcommand{\titelheader}{BA Lisa Schmidt}
 \newcommand{\arbeit}{Bachelor Thesis}
 \newcommand{\studiengang}{Internationale Wirtschaftsinformatik}
@@ -75,7 +75,7 @@
 \renewcommand*{\chapterpagestyle}{plain}
 \pagestyle{plain}
 %\include{Inhalt/03_Verzeichnisse/formelgroessen}
-%\include{Inhalt/03_Verzeichnisse/abkuerzungen}
+\include{Inhalt/03_Verzeichnisse/abkuerzungen}
 %\listoffigures                          % Erzeugen des Abbildungsverzeichnisses 
 %\listoftables                           % Erzeugen des Tabellenverzeichnisses
 %\renewcommand{\lstlistlistingname}{Quellcodeverzeichnis}
