--- a/Inhalt/00_Latex/praeambel.tex
+++ b/Inhalt/00_Latex/praeambel.tex
@@ -9,7 +9,7 @@
 	abstract,              % Überschrift einschalten, Abstract muss in {abstract}-Umgebung stehen
 ]{scrreprt}                  % Verwendung von KOMA-Report
 \usepackage[utf8]{inputenc}  % UTF8 Encoding einschalten
-\usepackage[ngerman]{babel}  % Neue deutsche Rechtschreibung
+\usepackage[english]{babel}  % Neue deutsche Rechtschreibung
 \usepackage[T1]{fontenc}     % Ausgabe von westeuropäischen Zeichen (auch Umlaute)
 \usepackage{microtype}       % Trennung von Wörtern wird besser umgesetzt
 \usepackage{lmodern}         % Nicht-gerasterte Schriftarten (bei MikTeX erforderlich)
@@ -35,14 +35,14 @@
 % Anpassung von autoref für Gleichungen (ergänzt runde Klammern) und Algorithm.
 % Anstatt "Listing" kann auch z.B. "Code-Ausschnitt" verwendet werden. Dies sollte
 % jedoch synchron gehalten werden mit \lstlistingname (siehe weiter unten).
-\addto\extrasngerman{%
-	\def\equationautorefname~#1\null{Gleichung~(#1)\null}
-	\def\lstnumberautorefname{Zeile}
-	\def\lstlistingautorefname{Listing}
-	\def\algorithmautorefname{Algorithmus}
+%\addto\extrasngerman{%
+%	\def\equationautorefname~#1\null{Gleichung~(#1)\null}
+%	\def\lstnumberautorefname{Zeile}
+%	\def\lstlistingautorefname{Listing}
+%	\def\algorithmautorefname{Algorithmus}
 	% Damit einheitlich "Abschnitt 1.2[.3]" verwendet wird und nicht "Unterabschnitt 1.2.3"
 	% \def\subsectionautorefname{Abschnitt}
-}
+%}
 
 % ---- Abstand verkleinern von der Überschrift 
 \renewcommand*{\chapterheadstartvskip}{\vspace*{.5\baselineskip}}
@@ -59,7 +59,7 @@
 	backend = biber,                % Verweis auf biber
 	language = auto,
 	style = numeric,                % Nummerierung der Quellen mit Zahlen
-	sorting = none,                 % none = Sortierung nach der Erscheinung im Dokument
+	sorting = nty,                 % none = Sortierung nach der Erscheinung im Dokument
 	sortcites = true,               % Sortiert die Quellen innerhalb eines cite-Befehls
 	block = space,                  % Extra Leerzeichen zwischen Blocks
 	hyperref = true,                % Links sind klickbar auch in der Quelle
