--- a/Inhalt/literatur.bib
+++ b/Inhalt/literatur.bib
@@ -1,136 +1,67 @@
-﻿% This file was created with Citavi 5.6.0.2
 
-@book{Bonnen.2016,
- abstract = {},
- author = {B{\"o}nnen, Carsten and Drees, Volker and Fischer, Andr{\'e} and Heinz, Ludwig and Strothmann, Karsten},
- year = {2016},
- title = {SAP Gateway und OData},
- address = {Bonn},
- edition = {2., aktualisierte und erweiterte Auflage},
- publisher = {{Rheinwerk Publishing}},
- isbn = {978-3-8362-4019-2},
- series = {SAP Press}
+@book{epstein_parsing_2008,
+	address = {New York},
+	title = {Parsing the turing test: philosophical and methodological issues in the quest for the thinking computer},
+	isbn = {978-1-4020-6708-2 978-1-4020-6710-5},
+	shorttitle = {Parsing the turing test},
+	publisher = {Springer},
+	editor = {Epstein, Robert and Roberts, Gary and Beber, Grace},
+	year = {2008},
+	keywords = {Artificial intelligence, Methodology, Philosophy},
 }
 
-
-@book{Forsthuber.2016,
- abstract = {},
- author = {Forsthuber, Heinz and Siebert, J{\"o}rg},
- year = {2016},
- title = {SAP{\circledR}-Finanzwesen: Das Praxishandbuch},
- address = {Bonn},
- edition = {6., aktualisierte und erweiterte Auflage},
- publisher = {Rheinwerk},
- isbn = {978-3-8362-3990-5},
- series = {Rheinwerk Publishing}
+@article{turing_icomputing_1950,
+	title = {I.—{COMPUTING} {MACHINERY} {AND} {IN}℡{LIGENCE}},
+	volume = {LIX},
+	issn = {0026-4423},
+	url = {https://doi.org/10.1093/mind/LIX.236.433},
+	doi = {10.1093/mind/LIX.236.433},
+	number = {236},
+	journal = {Mind},
+	author = {TURING, A. M.},
+	month = oct,
+	year = {1950},
+	note = {\_eprint: https://academic.oup.com/mind/article-pdf/LIX/236/433/30123314/lix-236-433.pdf},
+	pages = {433--460},
 }
 
-
-@book{Friedl.2017,
- abstract = {Das Standardwerk zum Controlling mit SAP in siebter Auflage. Die Vorz{\"u}ge: Leichte Verst{\"a}ndlichkeit, Beispielorientierung und {\"u}berschaubarer Umfang der Darstellung. Das klar strukturierte Konzept f{\"u}hrt den Leser anhand einer Fallstudie auch ohne Vorkenntnisse zu einem umfassenden Verst{\"a}ndnis der SAP-Software. Die Zusammenh{\"a}nge werden Schritt f{\"u}r Schritt erl{\"a}utert: Von den Grundlagen der Kostenrechnung und des Controllings {\"u}ber die Funktionsweise der SAP-Software bis hin zur Anwendung im praktischen Betrieb. In der siebten Auflage wurden zahlreiche Aktualisierungen vorgenommen. Detailliertere Angaben erh{\"o}hen die Benutzerfreundlichkeit sowohl bei der Durchf{\"u}hrung der Fallstudie als auch beim vorbereitenden Customizing. Der Inhalt {\"U}berblick {\"u}ber Controlling mit SAP - Durchg{\"a}ngige Fallstudie - Kostenstellenrechnung - Produktkalkulation und Kostentr{\"a}gerrechnung - Ergebnis- und Marktsegmentrechnung - Konzeptionelle Entwicklungen des Controllings und ihre Abdeckung durch SAP (ERP, BW, BusinessObjects) - Vorbereitende T{\"a}tigkeiten im Customizing Die Zielgruppen Studierende der Wirtschaftswissenschaften und der Wirtschaftsinformatik Praktiker in Unternehmen Dozenten an Universit{\"a}ten und Fachhochschulen sowie Schulungsleiter Die Autoren Prof. Dr. Gunther Friedl ist Inhaber des Lehrstuhls f{\"u}r Controlling an der Technischen Universit{\"a}t M{\"u}nchen. Prof. Dr. Burkhard Pedell ist Inhaber des Lehrstuhls Controlling an der Universit{\"a}t Stuttgart.},
- author = {Friedl, Gunther and Pedell, Burkhard},
- year = {2017},
- title = {Controlling mit SAP{\circledR}: Eine praxisorientierte Einf{\"u}hrung mit umfassender Fallstudie und beispielhaften Anwendungen},
- address = {Wiesbaden},
- edition = {7. Aufl. 2017},
- publisher = {{Springer Fachmedien Wiesbaden}},
- isbn = {978-3-658-17407-1}
+@book{buxmann_kunstliche_2019,
+	address = {Berlin},
+	title = {Künstliche {Intelligenz}: mit {Algorithmen} zum wirtschaftlichen {Erfolg}},
+	isbn = {978-3-662-57568-0 978-3-662-57567-3},
+	shorttitle = {Künstliche {Intelligenz}},
+	abstract = {Dieses Buch soll dabei helfen, die neuen Technologien und Anwendungspotenziale der künstlichen Intelligenz besser zu verstehen und einzuordnen. Neben einer ausführlichen und verständlichen Vermittlung grundlegender Kenntnisse und ökonomischer Effekte der künstlichen Intelligenz enthält es viele Anwendungsbeispiele bekannter Unternehmen. Konzerne wie Amazon, IBM, Microsoft, SAP oder VW lassen die Leser in ihre KI-Labors schauen und erklären konkrete Projekte zu Themen, wie z. B. Chatbots, Quantencomputing, Gesichtserkennung, sprachbasierte Systeme oder den Einsatz von KI-Anwendungen in den Bereichen Marketing, Vertrieb, Finanzen, Personalwesen, Produktion, Gesundheit sowie Logistik. Das Buch richtet sich an Entscheider in Unternehmen, Studierende, Dozenten und alle, die sich ein Bild über die vielleicht wichtigste technologische Entwicklung in diesem Jahrhundert machen möchten.(Verlagstext)},
+	language = {ger},
+	publisher = {Springer Gabler},
+	editor = {Buxmann, Peter and Schmidt, Holger},
+	year = {2019},
+	doi = {10.1007/978-3-662-57568-0},
+	annote = {Literaturangaben},
+	file = {Table of Contents PDF:/Users/I518232/Zotero/storage/3IKC5KGI/Buxmann and Schmidt - 2019 - Künstliche Intelligenz mit Algorithmen zum wirtsc.pdf:application/pdf},
 }
 
-
-@book{Kuhnlein.2016,
- abstract = {},
- author = {K{\"u}hnlein, Stefan and Seubert, Holger},
- year = {2016},
- title = {Native Anwendungsentwicklung mit SAP HANA},
- address = {Bonn},
- edition = {1. Auflage},
- publisher = {{Rheinwerk Publishing}},
- isbn = {978-3-8362-3867-0},
- series = {SAP Press}
+@article{gobinda_g_chowdhury_natural_2003,
+	title = {Natural language processing},
+	volume = {37},
+	issn = {0066-4200},
+	url = {https://strathprints.strath.ac.uk/2611/1/strathprints002611.pdf},
+	doi = {https://doi.org/10.1002/aris.1440370103},
+	number = {1},
+	journal = {Annual Review of Information Science and Technology},
+	author = {{Gobinda G. Chowdhury}},
+	month = jan,
+	year = {2003},
+	note = {Publisher: Springer},
+	pages = {51--89},
 }
 
-
-@book{Mukherjee.2017,
- abstract = {Leverage the flexibility and power of SAP MII to integrate your business operations with your manufacturing processes. You'll explore important new features of the product and see how to apply best practices to connect all the stakeholders in your business. This book starts with an overview of SAP's manufacturing integration and intelligence application and explains why it is so important. You'll then see how it is applied in various manufacturing sectors. The biggest challenge in manufacturing industries is to reduce the manual work and human intervention so that the process becomes automatic. SAP MII: Functional and Technical Concepts in Manufacturing Industries explains how to bridge the gap between management and production and bring sound vital information to the shop floor in real time. With this book you'll see how to ensure existing manufacturing and information systems share a common interface for all users in your enterprise.},
- author = {Mukherjee, Suman and Mukherjee, Saptaparna},
- year = {2017},
- title = {SAP MII: Functional and Technical Concepts in Manufacturing Industries},
- address = {Berkeley, CA},
- publisher = {Apress and {Imprint: Apress}},
- isbn = {978-1-4842-2814-2}
-}
-
-
-@misc{o.V..o.J.,
- abstract = {},
- author = {o.V.},
- editor = {{Frank Marketing UG}},
- year = {o.J.},
- title = {LaTeX arrows: Informationen zu LaTeX},
- howpublished = {\url{http://www.sascha-frank.com/Arrow/latex-arrows.html}},
- address = {o.O.},
- urldate = {2017-10-30}
-}
-
-
-@book{Preuss.2017,
- abstract = {},
- year = {2017},
- title = {In-Memory-Datenbank SAP HANA},
- address = {Wiesbaden},
- publisher = {{Springer Gabler}},
- isbn = {978-3-658-18603-6},
- series = {SpringerLink : B{\"u}cher},
- editor = {Preuss, Peter}
-}
-
-
-@book{Schell.2017,
- abstract = {},
- author = {Schell, Otto and Schocke, Kai-Oliver and Schmid-Lutz, Veronika and Stockrahm, Volker and Zinovieva, Julia},
- year = {2017},
- title = {Industrie 4.0 mit SAP: Digitale Transformation und das Internet of Things (IoT)},
- address = {Bonn},
- edition = {1. Auflage, neue Ausgabe},
- publisher = {Rheinwerk and {SAP PRESS}},
- isbn = {978-3-8362-4272-1},
- series = {SAP Press}
-}
-
-
-@misc{Smith.2017,
- abstract = {},
- author = {Smith, Andre},
- editor = {blogs.sap.com},
- year = {2017},
- title = {SAP Integrates the New Blockchain Technologies: SAP Tests Different Blockchains},
- howpublished = {\url{https://blogs.sap.com/2017/10/24/sap-integrates-the-new-blockchain-technologies/}},
- address = {o.O.},
- urldate = {2017-10-24}
-}
-
-
-@misc{Visser.2017,
- abstract = {},
- author = {Visser, Corina},
- editor = {{Zeit Online}},
- year = {2017},
- title = {Das Ende eines perfekten Teams},
- howpublished = {\url{http://www.zeit.de/wirtschaft/unternehmen/2013-07/sap-jim-hagemann-snabe-ruecktritt}},
- address = {o.O.},
- urldate = {2017-10-24}
-}
-
-
-@book{Zaidi.2017,
- abstract = {Easily master JavaScript (JS) with this quick guide and develop mobile and desktop applications for SAP Fiori. This book equips ABAP/SAP developers with the essential topics to get started with JS. The focus of JavaScript Essentials for SAP ABAP Developers is on the parts of the JS language that are useful from the perspective of an ABAP developer. The book starts with a brief intro to HTML, the basics of JS, and how to create and run a simple JS program. It then dives into the details of the language, showing how to make simple programs. It covers loops in detail, mathematical operations, and string and regular expressions in JS, as well as a taste of functions, followed by objects and object-oriented programming in JavaScript. The book provides: Sample code and screenshots to help you fully understand JSA chapter on JS best practices and recommendationsDifferences and comparisons of the elements and data structures of ABAP and JavaScript to help you quickly master the material What You'll Learn Create and run a simple JavaScript programUnderstand loops, operations, and expressionsMaster the Create and Use functionsUse objects and object-oriented programming in JSApply the best practices of JS programming Who This Book Is For SAP programmers and developers, ABAP users and developers, and university students learning ABAP and JavaScript.},
- author = {Zaidi, Rehan},
- year = {2017},
- title = {JavaScript essentials for SAP ABAP developers: A guide to mobile and desktop application development},
- address = {[New York, NY]},
- publisher = {Apress},
- isbn = {978-1-4842-2220-1}
+@article{koch_e-invoicing_nodate,
+	title = {The {E}-{Invoicing} {Journey} 2019-2025},
+	url = {https://www.billentis.com/The_einvoicing_journey_2019-2025.pdf},
+	language = {en},
+	author = {Koch, Bruno},
+	pages = {7},
+	file = {Koch - The E-Invoicing Journey 2019-2025.pdf:/Users/I518232/Zotero/storage/PL4PH5EP/Koch - The E-Invoicing Journey 2019-2025.pdf:application/pdf},
 }
 
 
