add research model and refine outline

--- a/Inhalt/04_Inhalt/alternatives.tex
+++ b/Inhalt/04_Inhalt/alternatives.tex
@@ -1,7 +1,14 @@
 \chapter{Discussion of Alternatives}
 \section{Criteria}
+\section{Dataset selection}
 
-\section{Data preprocessing}
+\section{Data Retrieval}
+
+\section{Business Understanding}
+
+\section{Data Understanding}
+
+\section{Data preparation}
 - transforming json documents into dataframe rows
 
 - removing stopwords from several languages
@@ -10,20 +17,24 @@
 
 - tokenization
 
-\section{Feature extraction}
-\subsection{Tf-Idf}
-- bag of words model
-\subsection{Word2Vec, Embeddings}
-- explain tf-idf
-\subsection{HashVectorizer}
-\subsection{n-Grams and Tf-Idf}
+	\subsection{Data processing and data wrangling}
+	
+	
+	\subsection{Data cleaning}
+	
+	\subsection{Feature Extraction and Feature Engineering}
+		\subsubsection{Tf-Idf}
+		- bag of words model
+		\subsubsection{Word2Vec, Embeddings}
+		- explain tf-idf
+		\subsubsection{HashVectorizer}
+		\subsubsection{n-Grams and Tf-Idf}
 
-\section{Model}
-\subsection{K-Means with Euclidean Distance}
-
-\section{Model Evaluation}
-\subsection{Elbow Diagram}
-
-\section{Visualization}
-\subsection{PCA}
-\subsection{T-SNE}
+\section{Modelling}
+	\subsection{K-Means with Euclidean Distance}
+\section{Evaluation}
+	\subsection{Elbow Diagram}
+	\subsection{Visualization}
+		\subsubsection{PCA}
+		\subsubsection{T-SNE}
+\section{Deployment}
