--- a/Inhalt/04_Inhalt/theoretical.tex
+++ b/Inhalt/04_Inhalt/theoretical.tex
@@ -1,1 +1,26 @@
 \chapter{Theoretical Implementation}
+
+\section{Dataset selection}
+
+\section{Data Retrieval}
+
+\section{Business Understanding}
+
+\section{Data Understanding}
+
+	\includegraphics[height=8cm]{Bilder/data_model.png}
+
+\section{Data preparation}
+
+\subsection{Data processing and data wrangling}
+
+
+\subsection{Data cleaning}
+
+
+\subsection{Feature Extraction and Feature Engineering}
+
+\section{Modelling}
+\section{Evaluation}
+\subsection{Visualization}
+\section{Deployment}
