--- a/Inhalt/literatur.bib
+++ b/Inhalt/literatur.bib
@@ -1,4 +1,7 @@
 
+@article{noauthor_notitle_nodate,
+}
+
 @book{epstein_parsing_2008,
 	address = {New York},
 	title = {Parsing the turing test: philosophical and methodological issues in the quest for the thinking computer},
@@ -40,6 +43,15 @@
 	file = {Table of Contents PDF:/Users/I518232/Zotero/storage/3IKC5KGI/Buxmann and Schmidt - 2019 - Künstliche Intelligenz mit Algorithmen zum wirtsc.pdf:application/pdf},
 }
 
+@article{koch_e-invoicing_nodate,
+	title = {The {E}-{Invoicing} {Journey} 2019-2025},
+	url = {https://www.billentis.com/The_einvoicing_journey_2019-2025.pdf},
+	language = {en},
+	author = {Koch, Bruno},
+	pages = {7},
+	file = {Koch - The E-Invoicing Journey 2019-2025.pdf:/Users/I518232/Zotero/storage/PL4PH5EP/Koch - The E-Invoicing Journey 2019-2025.pdf:application/pdf},
+}
+
 @article{gobinda_g_chowdhury_natural_2003,
 	title = {Natural language processing},
 	volume = {37},
@@ -55,13 +67,20 @@
 	pages = {51--89},
 }
 
-@article{koch_e-invoicing_nodate,
-	title = {The {E}-{Invoicing} {Journey} 2019-2025},
-	url = {https://www.billentis.com/The_einvoicing_journey_2019-2025.pdf},
-	language = {en},
-	author = {Koch, Bruno},
-	pages = {7},
-	file = {Koch - The E-Invoicing Journey 2019-2025.pdf:/Users/I518232/Zotero/storage/PL4PH5EP/Koch - The E-Invoicing Journey 2019-2025.pdf:application/pdf},
+@inproceedings{wirth_crisp-dm_2000,
+	title = {{CRISP}-{DM}: {Towards} a standard process model for data mining},
+	volume = {1},
+	booktitle = {Proceedings of the 4th international conference on the practical applications of knowledge discovery and data mining},
+	publisher = {Manchester},
+	author = {Wirth, Rüdiger and Hipp, Jochen},
+	year = {2000},
+	pages = {29--40},
+	file = {Wirth and Hipp - CRISP-DM Towards a Standard Process Model for Dat.pdf:/Users/I518232/Zotero/storage/GNBBS264/Wirth and Hipp - CRISP-DM Towards a Standard Process Model for Dat.pdf:application/pdf},
 }
 
-
+@inproceedings{chapman_crisp-dm_2000,
+	title = {{CRISP}-{DM} 1.0: {Step}-by-step data mining guide},
+	author = {Chapman, Peter and Clinton, Janet and Kerber, Randy and Khabaza, Tom and Reinartz, Thomas P. and Shearer, Colin and Wirth, Richard},
+	year = {2000},
+	file = {Chapman et al. - 2000 - CRISP-DM 1.0 Step-by-step data mining guide.pdf:/Users/I518232/Zotero/storage/XWX5MT84/Chapman et al. - 2000 - CRISP-DM 1.0 Step-by-step data mining guide.pdf:application/pdf},
+}
