--- a/Inhalt/03_Verzeichnisse/abkuerzungen.tex
+++ b/Inhalt/03_Verzeichnisse/abkuerzungen.tex
@@ -7,5 +7,6 @@
 	\acro{AI}{Artificial Intelligence}
 	\acro{AI BUS}{SAP AI Business Services}
 	\acro{NLP}{Natural Language Processing}
+	\acro{CRISP-DM}{Cross Industry Standard Process for Data Mining}
 
 \end{acronym}
