--- a/Inhalt/04_Inhalt/Objectives and Criteria.tex
+++ b/Inhalt/04_Inhalt/Objectives and Criteria.tex
@@ -4,3 +4,8 @@ The goal of the thesis is to add value to real business documents by aggregating
 The task is to perform a full data analysis on the supplied dataset. The dataset is to be prepared for processing with established methods. An evaluation for different means of feature extraction, machine learning, model evaluation and visualization should be performed. With the evaluation a complete flow for the data processing should be presented. The result should be an added value to the dataset in the form of aggregated expenses.
 
 \section{Criteria set by SAP SE}
+
+\section{Research Model}
+To solve the task described in chapter 1.2, this paper employs the \ac{CRISP-DM}. This process model \cite{chapman_crisp-dm_2000} puts forward a structure for conducting data mining projects. \ac{CRISP-DM} was developed in 1996 by thee companies, which are now the partners of the \ac{CRISP-DM} consortium: NCR, DaimlerChrysler AG and SPSS Inc.
+
+\includegraphics[height=10cm]{Bilder/Research_Model.png} 
