--- a/Inhalt/04_Inhalt/fundamentals.tex
+++ b/Inhalt/04_Inhalt/fundamentals.tex
@@ -16,8 +16,11 @@ The third way in which an algorithm can make better decisions as it gains experi
 
 The three major ways of learning even with previously defined behavior can now be implemented by specific models. For example, there are several ways to create and train a model using Unsupervised Learning.
 
-\section{Natural Language Processing}
+\subsection{Clustering Algorithms}
+multinomial, one bad example for a clustering would be the closest 5 docs to each one (this is multilabel)
+
+\subsection{Natural Language Processing}
 \ac{NLP} is often attributed to the computer science, but after closer examination, \ac{NLP} is a discipline comprised of linguistics, computer science, artificial intelligence an mathematics \cite{gobinda_g_chowdhury_natural_2003}.
 
 \section{SAP AI Core}
-\section{Docker}
+\subsection{Docker}
