adding content for fundamentals, update citations

--- a/Inhalt/03_Verzeichnisse/abkuerzungen.tex
+++ b/Inhalt/03_Verzeichnisse/abkuerzungen.tex
@@ -8,5 +8,9 @@
 	\acro{AI BUS}{SAP AI Business Services}
 	\acro{NLP}{Natural Language Processing}
 	\acro{CRISP-DM}{Cross Industry Standard Process for Data Mining}
+	\acro{CoE}{Center of Excellence}
+	\acrodefplural{CoE}{Centers of Excellence}
+	\acro{SAP}
+	
 
 \end{acronym}
