--- a/Inhalt/04_Inhalt/alternatives.tex
+++ b/Inhalt/04_Inhalt/alternatives.tex
@@ -1,5 +1,7 @@
 \chapter{Discussion of Alternatives}
-\section{Criteria}
+
+For each step in the \ac{CRISP-DM} process, a multitude of different approaches can be employed. In this chapter, the alternatives are presented and evaluated on the basis of established criteria.
+
 \section{Dataset selection}
 
 \section{Data Retrieval}
@@ -34,6 +36,8 @@
 	\subsection{K-Means with Euclidean Distance}
 \section{Evaluation}
 	\subsection{Elbow Diagram}
+	\subsection{average silhouette method}
+	\subsection{gap statistic}
 	\subsection{Visualization}
 		\subsubsection{PCA}
 		\subsubsection{T-SNE}
