--- a/Inhalt/literatur.bib
+++ b/Inhalt/literatur.bib
@@ -1,86 +1,106 @@
 
-@article{noauthor_notitle_nodate,
+@book{buxmannKI2019,
+  title = {{K\"unstliche Intelligenz: mit Algorithmen zum wirtschaftlichen Erfolg}},
+  shorttitle = {{K\"unstliche Intelligenz}},
+  editor = {Buxmann, Peter and Schmidt, Holger},
+  year = {2019},
+  publisher = {{Springer Gabler}},
+  address = {{Berlin}},
+  doi = {10.1007/978-3-662-57568-0},
+  abstract = {Dieses Buch soll dabei helfen, die neuen Technologien und Anwendungspotenziale der k\"unstlichen Intelligenz besser zu verstehen und einzuordnen. Neben einer ausf\"uhrlichen und verst\"andlichen Vermittlung grundlegender Kenntnisse und \"okonomischer Effekte der k\"unstlichen Intelligenz enth\"alt es viele Anwendungsbeispiele bekannter Unternehmen. Konzerne wie Amazon, IBM, Microsoft, SAP oder VW lassen die Leser in ihre KI-Labors schauen und erkl\"aren konkrete Projekte zu Themen, wie z. B. Chatbots, Quantencomputing, Gesichtserkennung, sprachbasierte Systeme oder den Einsatz von KI-Anwendungen in den Bereichen Marketing, Vertrieb, Finanzen, Personalwesen, Produktion, Gesundheit sowie Logistik. Das Buch richtet sich an Entscheider in Unternehmen, Studierende, Dozenten und alle, die sich ein Bild \"uber die vielleicht wichtigste technologische Entwicklung in diesem Jahrhundert machen m\"ochten.(Verlagstext)},
+  isbn = {978-3-662-57568-0 978-3-662-57567-3},
+  langid = {german},
+  file = {/Users/I518232/Zotero/storage/3IKC5KGI/Buxmann and Schmidt - 2019 - Künstliche Intelligenz mit Algorithmen zum wirtsc.pdf}
 }
 
-@book{epstein_parsing_2008,
-	address = {New York},
-	title = {Parsing the turing test: philosophical and methodological issues in the quest for the thinking computer},
-	isbn = {978-1-4020-6708-2 978-1-4020-6710-5},
-	shorttitle = {Parsing the turing test},
-	publisher = {Springer},
-	editor = {Epstein, Robert and Roberts, Gary and Beber, Grace},
-	year = {2008},
-	keywords = {Artificial intelligence, Methodology, Philosophy},
+@article{chowdhury2003,
+  title = {Natural Language Processing},
+  author = {{Gobinda G. Chowdhury}},
+  year = {2003},
+  month = jan,
+  journal = {Annual Review of Information Science and Technology},
+  volume = {37},
+  number = {1},
+  pages = {51--89},
+  publisher = {{Springer}},
+  issn = {0066-4200},
+  doi = {10.1002/aris.1440370103}
 }
 
-@article{turing_icomputing_1950,
-	title = {I.—{COMPUTING} {MACHINERY} {AND} {IN}℡{LIGENCE}},
-	volume = {LIX},
-	issn = {0026-4423},
-	url = {https://doi.org/10.1093/mind/LIX.236.433},
-	doi = {10.1093/mind/LIX.236.433},
-	number = {236},
-	journal = {Mind},
-	author = {TURING, A. M.},
-	month = oct,
-	year = {1950},
-	note = {\_eprint: https://academic.oup.com/mind/article-pdf/LIX/236/433/30123314/lix-236-433.pdf},
-	pages = {433--460},
+@inproceedings{CRISPDM2000,
+  title = {{{CRISP-DM}} 1.0: {{Step-by-step}} Data Mining Guide},
+  author = {Chapman, Peter and Clinton, Janet and Kerber, Randy and Khabaza, Tom and Reinartz, Thomas P. and Shearer, Colin and Wirth, Richard},
+  year = {2000},
+  file = {/Users/I518232/Zotero/storage/XWX5MT84/Chapman et al. - 2000 - CRISP-DM 1.0 Step-by-step data mining guide.pdf}
 }
 
-@book{buxmann_kunstliche_2019,
-	address = {Berlin},
-	title = {Künstliche {Intelligenz}: mit {Algorithmen} zum wirtschaftlichen {Erfolg}},
-	isbn = {978-3-662-57568-0 978-3-662-57567-3},
-	shorttitle = {Künstliche {Intelligenz}},
-	abstract = {Dieses Buch soll dabei helfen, die neuen Technologien und Anwendungspotenziale der künstlichen Intelligenz besser zu verstehen und einzuordnen. Neben einer ausführlichen und verständlichen Vermittlung grundlegender Kenntnisse und ökonomischer Effekte der künstlichen Intelligenz enthält es viele Anwendungsbeispiele bekannter Unternehmen. Konzerne wie Amazon, IBM, Microsoft, SAP oder VW lassen die Leser in ihre KI-Labors schauen und erklären konkrete Projekte zu Themen, wie z. B. Chatbots, Quantencomputing, Gesichtserkennung, sprachbasierte Systeme oder den Einsatz von KI-Anwendungen in den Bereichen Marketing, Vertrieb, Finanzen, Personalwesen, Produktion, Gesundheit sowie Logistik. Das Buch richtet sich an Entscheider in Unternehmen, Studierende, Dozenten und alle, die sich ein Bild über die vielleicht wichtigste technologische Entwicklung in diesem Jahrhundert machen möchten.(Verlagstext)},
-	language = {ger},
-	publisher = {Springer Gabler},
-	editor = {Buxmann, Peter and Schmidt, Holger},
-	year = {2019},
-	doi = {10.1007/978-3-662-57568-0},
-	annote = {Literaturangaben},
-	file = {Table of Contents PDF:/Users/I518232/Zotero/storage/3IKC5KGI/Buxmann and Schmidt - 2019 - Künstliche Intelligenz mit Algorithmen zum wirtsc.pdf:application/pdf},
+@book{epsteinParsingTuringTest2008,
+  title = {Parsing the Turing Test: Philosophical and Methodological Issues in the Quest for the Thinking Computer},
+  shorttitle = {Parsing the Turing Test},
+  editor = {Epstein, Robert and Roberts, Gary and Beber, Grace},
+  year = {2008},
+  publisher = {{Springer}},
+  address = {{New York}},
+  isbn = {978-1-4020-6708-2 978-1-4020-6710-5},
+  lccn = {Q335 .P35445 2008},
+  keywords = {Artificial intelligence,Methodology,Philosophy}
 }
 
-@article{koch_e-invoicing_nodate,
-	title = {The {E}-{Invoicing} {Journey} 2019-2025},
-	url = {https://www.billentis.com/The_einvoicing_journey_2019-2025.pdf},
-	language = {en},
-	author = {Koch, Bruno},
-	pages = {7},
-	file = {Koch - The E-Invoicing Journey 2019-2025.pdf:/Users/I518232/Zotero/storage/PL4PH5EP/Koch - The E-Invoicing Journey 2019-2025.pdf:application/pdf},
+@misc{GeschichteSAP1972,
+  title = {Geschichte Der {{SAP}}},
+  journal = {Die Anfangsjahre 1072-1980},
+  howpublished = {https://www.sap.com/germany/about/company/history/1972-1980.html}
 }
 
-@article{gobinda_g_chowdhury_natural_2003,
-	title = {Natural language processing},
-	volume = {37},
-	issn = {0066-4200},
-	url = {https://strathprints.strath.ac.uk/2611/1/strathprints002611.pdf},
-	doi = {https://doi.org/10.1002/aris.1440370103},
-	number = {1},
-	journal = {Annual Review of Information Science and Technology},
-	author = {{Gobinda G. Chowdhury}},
-	month = jan,
-	year = {2003},
-	note = {Publisher: Springer},
-	pages = {51--89},
+@misc{JuergenMuellerBiography,
+  type = {Company {{Website}}},
+  title = {Juergen {{Mueller}} Biography},
+  journal = {Juergen Mueller biography},
+  howpublished = {https://www.sap.com/about/company/leadership/juergen-mueller.html},
+  langid = {english}
 }
 
-@inproceedings{wirth_crisp-dm_2000,
-	title = {{CRISP}-{DM}: {Towards} a standard process model for data mining},
-	volume = {1},
-	booktitle = {Proceedings of the 4th international conference on the practical applications of knowledge discovery and data mining},
-	publisher = {Manchester},
-	author = {Wirth, Rüdiger and Hipp, Jochen},
-	year = {2000},
-	pages = {29--40},
-	file = {Wirth and Hipp - CRISP-DM Towards a Standard Process Model for Dat.pdf:/Users/I518232/Zotero/storage/GNBBS264/Wirth and Hipp - CRISP-DM Towards a Standard Process Model for Dat.pdf:application/pdf},
+@article{kochEInvoicingJourney,
+  title = {The {{E-Invoicing Journey}} 2019-2025},
+  author = {Koch, Bruno},
+  pages = {7},
+  langid = {english},
+  file = {/Users/I518232/Zotero/storage/PL4PH5EP/Koch - The E-Invoicing Journey 2019-2025.pdf}
 }
 
-@inproceedings{chapman_crisp-dm_2000,
-	title = {{CRISP}-{DM} 1.0: {Step}-by-step data mining guide},
-	author = {Chapman, Peter and Clinton, Janet and Kerber, Randy and Khabaza, Tom and Reinartz, Thomas P. and Shearer, Colin and Wirth, Richard},
-	year = {2000},
-	file = {Chapman et al. - 2000 - CRISP-DM 1.0 Step-by-step data mining guide.pdf:/Users/I518232/Zotero/storage/XWX5MT84/Chapman et al. - 2000 - CRISP-DM 1.0 Step-by-step data mining guide.pdf:application/pdf},
+@misc{SAPSEExecutive,
+  title = {{{SAP SE Executive Board}}},
+  journal = {SAP SE Corporate Governance},
+  howpublished = {https://www.sap.com/investors/en/governance/executive-board.html}
 }
+
+@article{turing1950,
+  title = {I.\textemdash{{COMPUTING MACHINERY AND IN}}TEL{{LIGENCE}}},
+  author = {TURING, A. M.},
+  year = {1950},
+  month = oct,
+  journal = {Mind},
+  volume = {LIX},
+  number = {236},
+  pages = {433--460},
+  issn = {0026-4423},
+  doi = {10.1093/mind/LIX.236.433},
+  annotation = {\_eprint: https://academic.oup.com/mind/article-pdf/LIX/236/433/30123314/lix-236-433.pdf}
+}
+
+@inproceedings{wirthCRISPDMStandardProcess2000,
+  title = {{{CRISP-DM}}: {{Towards}} a Standard Process Model for Data Mining},
+  booktitle = {Proceedings of the 4th International Conference on the Practical Applications of Knowledge Discovery and Data Mining},
+  author = {Wirth, R{\"u}diger and Hipp, Jochen},
+  year = {2000},
+  volume = {1},
+  pages = {29--40},
+  publisher = {{Manchester}},
+  file = {/Users/I518232/Zotero/storage/GNBBS264/Wirth and Hipp - CRISP-DM Towards a Standard Process Model for Dat.pdf}
+}
+
+@article{zotero-1,
+  type = {Article}
+}
+
+
