--- a/Inhalt/04_Inhalt/Objectives and Criteria.tex
+++ b/Inhalt/04_Inhalt/Objectives and Criteria.tex
@@ -6,6 +6,6 @@ The task is to perform a full data analysis on the supplied dataset. The dataset
 \section{Criteria set by SAP SE}
 
 \section{Research Model}
-To solve the task described in chapter 1.2, this paper employs the \ac{CRISP-DM}. This process model \cite{chapman_crisp-dm_2000} puts forward a structure for conducting data mining projects. \ac{CRISP-DM} was developed in 1996 by thee companies, which are now the partners of the \ac{CRISP-DM} consortium: NCR, DaimlerChrysler AG and SPSS Inc.
+To solve the task described in chapter 1.2, this paper employs the \ac{CRISP-DM}. This process model \cite{CRISPDM2000} puts forward a structure for conducting data mining projects. \ac{CRISP-DM} was developed in 1996 by thee companies, which are now the partners of the \ac{CRISP-DM} consortium: NCR, DaimlerChrysler AG and SPSS Inc.
 
 \includegraphics[height=10cm]{Bilder/Research_Model.png} 
