--- a/Inhalt/04_Inhalt/fundamentals.tex
+++ b/Inhalt/04_Inhalt/fundamentals.tex
@@ -2,6 +2,31 @@
 \section{Glossary of Terms}
 
 \section{Corporate Environment}
+
+	\subsection{Historical}
+	SAP was founded in 1972 by five ex-IBM employees. The original company name was "Systemanalyse Programmentwicklung", which can be translated to "System analysis and program development". In 1976, a second company, the SAP GmbH was founded, where the acronym SAP denoted "Systems, Applications and Products for data processing" \cite{GeschichteSAP1972}. The SAP GmbH is the company, which is today known as SAP SE. 
+	Data processing being part of the company's name shows the importance of this field in the SAP solution space. 
+
+	- when did SAP enter AI?
+	
+	- whcih AI products existed prior?
+	
+	- What comes in the future?
+	
+	- how much does SAP earn with AI?
+	
+	\subsection{Organizational}
+	SAP SE has an executive board consisting of seven members, each attributed to one area. The \ac{AI} division falls into the responsibility of Jürgen Müller, Chief Technology Officer and leader of the board area for technology and innovation \cite{JuergenMuellerBiography}.
+	Members of the organizational unit for \ac{AI} are divided in different teams concerned with development, product success, operations and specific \ac{AI}-services. Development Teams are organized into \acp{CoE}, in which special expertise for designated areas is united.
+	
+	\subsection{Technological}
+	https://www.sap.com/products/artificial-intelligence.html
+	
+	
+	\subsection{Methodological}
+	
+
+
 \section{Machine Learning}
 Already Alan Turing understood that for laymen a learning machine can be perceived as a paradox.  How can a machine learn, if a human has to define its behavior beforehand? There are three major subfields in the discipline of artificial intelligence that fundamentally explain how a computer can learn how to behave despite predefined behavior.
 
@@ -20,7 +45,7 @@ The three major ways of learning even with previously defined behavior can now b
 multinomial, one bad example for a clustering would be the closest 5 docs to each one (this is multilabel)
 
 \subsection{Natural Language Processing}
-\ac{NLP} is often attributed to the computer science, but after closer examination, \ac{NLP} is a discipline comprised of linguistics, computer science, artificial intelligence an mathematics \cite{gobinda_g_chowdhury_natural_2003}.
+\ac{NLP} is often attributed to the computer science, but after closer examination, \ac{NLP} is a discipline comprised of linguistics, computer science, artificial intelligence an mathematics \cite{chowdhury2003}.
 
 \section{SAP AI Core}
 \subsection{Docker}
