alternatives for vector representations

--- a/Inhalt/03_Verzeichnisse/abkuerzungen.tex
+++ b/Inhalt/03_Verzeichnisse/abkuerzungen.tex
@@ -10,7 +10,7 @@
 	\acro{CRISP-DM}{Cross Industry Standard Process for Data Mining}
 	\acro{CoE}{Center of Excellence}
 	\acrodefplural{CoE}{Centers of Excellence}
-	\acro{SAP}
-	
+	\acro{BoW}{Bag of Words}
+	\acro{TF-IDF}{ferm frequency - inverse document frequency}	
 
 \end{acronym}
