--- a/Inhalt/literatur.bib
+++ b/Inhalt/literatur.bib
@@ -68,10 +68,27 @@
   file = {/Users/I518232/Zotero/storage/PL4PH5EP/Koch - The E-Invoicing Journey 2019-2025.pdf}
 }
 
+@misc{rutschmannSAPLeonardo2021,
+  title = {The {{Journey}} from {{SAP Leonardo Machine Learning Foundation}} to {{SAP AI Core}} and {{SAP AI Launchpad}}},
+  author = {{Daniel Rutschmann}},
+  year = {2021},
+  month = oct,
+  journal = {SAP Community},
+  howpublished = {https://blogs.sap.com/2021/10/11/the-journey-from-sap-leonardo-machine-learning-foundation-to-sap-ai-core-and-sap-ai-launchpad/}
+}
+
 @misc{SAPSEExecutive,
   title = {{{SAP SE Executive Board}}},
   journal = {SAP SE Corporate Governance},
   howpublished = {https://www.sap.com/investors/en/governance/executive-board.html}
+}
+
+@misc{schmitzLeonardo,
+  title = {{Was ist SAP Leonardo?}},
+  author = {{Andreas Schmitz}},
+  year = {2017},
+  month = jul,
+  langid = {german}
 }
 
 @article{turing1950,
