--- a/Inhalt/04_Inhalt/fundamentals.tex
+++ b/Inhalt/04_Inhalt/fundamentals.tex
@@ -1,15 +1,26 @@
 \chapter{Fundamentals}
 \section{Glossary of Terms}
 
+	\begin{itemize}
+		\item SAP SE
+		\item SAP Leonardo MLF
+		\item SAP AI Core
+		\item SAP AI Launchpad
+		\item AI Foundation
+	\end{itemize}
+
 \section{Corporate Environment}
 
 	\subsection{Historical}
 	SAP was founded in 1972 by five ex-IBM employees. The original company name was "Systemanalyse Programmentwicklung", which can be translated to "System analysis and program development". In 1976, a second company, the SAP GmbH was founded, where the acronym SAP denoted "Systems, Applications and Products for data processing" \cite{GeschichteSAP1972}. The SAP GmbH is the company, which is today known as SAP SE. 
-	Data processing being part of the company's name shows the importance of this field in the SAP solution space. 
-
-	- when did SAP enter AI?
 	
-	- whcih AI products existed prior?
+	Data processing being part of the company's name shows the importance of this field to SAP since the beginning of the company history.
+	In 2017 SAP entered the AI business with the SAP Leonardo Machine Learning Foundation \cite{rutschmannSAPLeonardo2021}, and challenged the market for hyped products in machine learning, blockchain, big data and design thinking. The name Leonardo refers to Leonardo Da Vinci, who is renowned for his interdisciplinary innovations \cite{schmitzLeonardo}. SAP has the goal of driving the digital innovation strategies of customers with the help of SAP Leonardo.
+	
+	
+	With changes in the underlying hyperscalers for Leonardo, and evolving requirements of customers and partners, SAP adjusted their AI strategy. Two new products were introduced: SAP AI Core and SAP AI Launchpad. Both products are united under the collective name of AI Foundation \cite{rutschmannSAPLeonardo2021}. With the general availability of AI Foundation in late 2021, SAP Leonardo is officially sunsetted.
+	
+	
 	
 	- What comes in the future?
 	
@@ -18,14 +29,10 @@
 	\subsection{Organizational}
 	SAP SE has an executive board consisting of seven members, each attributed to one area. The \ac{AI} division falls into the responsibility of Jürgen Müller, Chief Technology Officer and leader of the board area for technology and innovation \cite{JuergenMuellerBiography}.
 	Members of the organizational unit for \ac{AI} are divided in different teams concerned with development, product success, operations and specific \ac{AI}-services. Development Teams are organized into \acp{CoE}, in which special expertise for designated areas is united.
+	SAP has a team of researchers around the world concerned with state-of-the-art topics, including few-shot learning, sentiment analysis, privacy and fairness \cite{AIOverviewResearch}. The research teams regularly publish articles on their advancements.
 	
 	\subsection{Technological}
 	https://www.sap.com/products/artificial-intelligence.html
-	
-	
-	\subsection{Methodological}
-	
-
 
 \section{Machine Learning}
 Already Alan Turing understood that for laymen a learning machine can be perceived as a paradox.  How can a machine learn, if a human has to define its behavior beforehand? There are three major subfields in the discipline of artificial intelligence that fundamentally explain how a computer can learn how to behave despite predefined behavior.
