word2vec architecture

--- a/Inhalt/03_Verzeichnisse/abkuerzungen.tex
+++ b/Inhalt/03_Verzeichnisse/abkuerzungen.tex
@@ -12,5 +12,6 @@
 	\acrodefplural{CoE}{Centers of Excellence}
 	\acro{BoW}{Bag of Words}
 	\acro{TF-IDF}{ferm frequency - inverse document frequency}	
+	\acro{CBOW}{Continuous Bag of Words}
 
 \end{acronym}
